--- a/iweather/Podfile
+++ b/iweather/Podfile
@@ -1,11 +1,13 @@
-# Uncomment this line to define a global platform for your project
+# Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
 target 'iweather' do
-  # Comment this line if you're not using Swift and don't want to use dynamic frameworks
+  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for iweather
-  pod ‘RealmSwift’
-  pod ‘Alamofire’
+    pod ‘RealmSwift’
+    pod ‘Alamofire’
+    pod 'SwiftGifOrigin', '~> 1.6.1'
+
 end
