--- a/iweather/Podfile
+++ b/iweather/Podfile
@@ -1,13 +1,16 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
+use_frameworks!
 
 target 'iweather' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
-
-  # Pods for iweather
-    pod ‘RealmSwift’
-    pod ‘Alamofire’
+    pod 'RealmSwift'
+    pod 'Alamofire'
     pod 'SwiftGifOrigin', '~> 1.6.1'
 
+end
+
+target 'myWeather' do
+    pod 'RealmSwift'
+    pod 'Alamofire'
+    pod 'SwiftGifOrigin', '~> 1.6.1'
 end
